# OpenCV-octVR

./: .gitignore  CMakeLists.txt  Makefile.am  base.cpp  base.hpp  camera.cpp  camera.hpp  cubic.hpp  dumper.cpp  eqareanorthpole.hpp  eqareasouthpole.hpp  equirectangular.cpp  equirectangular.hpp  fisheye_cam.cpp  fisheye_cam.hpp  fullframe_fisheye_cam.cpp  fullframe_fisheye_cam.hpp  libmap.cpp  libmap.hpp  libmap_async.cpp  libmap_async.hpp  libmap_impl.hpp  libmap_loaddump.cpp  mapper.cpp  mapper_template.cpp  normal.cpp  normal.hpp  opencv.sublime-project  pinhole_cam.cpp  pinhole_cam.hpp  stupidoval.hpp  test.cpp  test_camera.cpp  test_equirectangular.cpp  test_pinhole.cpp
android-opencl-sdk/include/CL/: cl.hpp
apps/: CMakeLists.txt
apps/livestitching/: CMakeLists.txt  encryptor.cpp  encryptor.hpp  icons.qrc  inputs_select.cpp  inputs_select.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preview_video.cpp  preview_video.hpp  projection_modes.cpp  projection_modes.hpp  pto_template.cpp  pto_template.hpp  qjsonitem.cpp  qjsonitem.h  qjsonmodel.cpp  qjsonmodel.h  runner.cpp  runner.hpp  style.qss
apps/livestitching/data/: sample_overlay.json
apps/livestitching/icons/: splash.psd
apps/octvr/: CMakeLists.txt  dump.cpp  gain.cpp  gain_and_remap.cpp  map.cpp  monkey_gen.cpp
build-android/: make-Makefiles.bash  make-Ninja.bash
build-windows/: make-solution.bat
build-windows/nmake/: make-MakeFile-with-dongle.bat  make-MakeFile.bat
build-windows/vc12-x86_64/: make-Solution-encrypt-arg.bat  make-Solution-release.bat  make-Solution-with-dongle.bat  make-Solution.bat
cameras/: eqareanorthpole.hpp  eqareasouthpole.hpp  equirectangular.cpp  equirectangular.hpp  fullframe_fisheye_cam.cpp  fullframe_fisheye_cam.hpp  normal.hpp  pinhole_cam.hpp  stupidoval.hpp
cmake/: OpenCVFindLibsVideo.cmake  cl2cpp.cmake
cmake/checks/: libsodium.cpp
libmap/: libmap.cpp  libmap_async.hpp  libmap_cpu.cpp  libmap_impl.hpp  monkey_gen.cpp  readme.md  timer.cpp
libmap/cameras/: fullframe_fisheye_cam.cpp  normal.hpp
libmap/tests/: test_camera.cpp  test_pinhole.cpp
modules/core/include/opencv2/core/: cuda.hpp  cuda.inl.hpp
modules/core/src/: ocl.cpp  parallel.cpp  rand.cpp
modules/core/src/cuda/: gpu_mat.cu
modules/cudaarithm/src/: element_operations.cpp
modules/cudaarithm/src/cuda/: bitwise_mat.cu  div_mat.cu  mul_mat.cu
modules/cudaimgproc/include/opencv2/: cudaimgproc.hpp
modules/cudaimgproc/src/: color.cpp
modules/cudaimgproc/src/cuda/: uyvy.cu
modules/cudawarping/include/opencv2/: cudawarping.hpp
modules/cudawarping/src/: pyramids.cpp  remap.cpp
modules/cudawarping/src/cuda/: fast_pyr_down.cu  fast_remap.cu  linear_remap.cu  pyr_up.cu  remap.cu
modules/cudev/include/opencv2/cudev/ptr2d/: texture.hpp
modules/highgui/src/: precomp.hpp
modules/imgcodecs/src/: grfmt_jpeg2000.cpp  precomp.hpp
modules/imgproc/include/opencv2/: imgproc.hpp
modules/imgproc/src/: filter.cpp  imgwarp.cpp
modules/imgproc/src/opencl/: remap_weighted.cl
modules/java/: CMakeLists.txt
modules/java/generator/src/cpp/: camera_view.cpp
modules/java/generator/src/java/: android+CameraBridgeViewBase.java  android+FpsMeter.java  android+JavaCameraView.java  android+UMatCameraViewFrame.java
modules/octvr/: CMakeLists.txt
modules/octvr/include/: json.hpp  octvr.hpp
modules/octvr/include/rapidjson/: document.h  rapidjson.h
modules/octvr/src/: async.cpp  async.hpp  camera.cpp  camera.hpp  logo_png.h  mapper.cpp  mapper.hpp  mapper_cpu.cpp  mapper_fast.cpp  parallel_caller.hpp  template.cpp  template_morph.cpp  timer.cpp  vignette.cpp  vignette.hpp
modules/octvr/src/cameras/: cubic.hpp  eqareanorthpole.hpp  eqareasouthpole.hpp  equirectangular.cpp  equirectangular.hpp  fisheye_cam.hpp  fullframe_fisheye_cam.cpp  fullframe_fisheye_cam.hpp  normal.cpp  normal.hpp  ocam_fisheye.cpp  ocam_fisheye.hpp  perspective.cpp  perspective.hpp  pinhole_cam.cpp  pinhole_cam.hpp  stupidoval.hpp
modules/octvr/tools/: json_reverse.py  logo_converter.py  lon_select.py  ocam2json.py  ocamgroup2json.py  ptx2json.py
modules/stitching/include/opencv2/stitching/detail/: blenders.hpp  exposure_compensate.hpp  seam_finders.hpp
modules/stitching/src/: blenders.cpp  exposure_compensate.cpp  precomp.hpp  seam_finders.cpp
modules/stitching/src/cuda/: blender.cu  exposure_compensate.cu
samples/android/: CMakeLists.txt
samples/android/monkeyVR/: AndroidManifest.xml  CMakeLists.txt
samples/android/monkeyVR/jni/: Android.mk  Application.mk  codec.cpp  codec.hpp  common.h  jni.c  jni.cpp  monkey.cpp  monkey.hpp
samples/android/monkeyVR/res/layout/: activity.xml  keyboard_prompt.xml  splash.xml
samples/android/monkeyVR/res/values/: strings.xml
samples/android/monkeyVR/src/loft/monkeyVR/: MonkeyVRActivity.java  NativeBridge.java  NativePart.java  SplashActivity.java
samples/android/tutorial-4-opencl/jni/: CLprocessor.cpp  jni.c
samples/android/tutorial-4-opencl/res/layout/: activity.xml
samples/android/tutorial-4-opencl/res/menu/: menu.xml
samples/android/tutorial-4-opencl/src/org/opencv/samples/tutorial4/: DualCamProcessor.java  MyGLSurfaceView.java  NativePart.java  Tutorial4Activity.java
tests/: test.cpp  test_camera.cpp  test_equirectangular.cpp
